<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="16dp" android:orientation="vertical">

    <TextView
        android:id="@+id/tvDayForecast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@android:color/black"
        android:textSize="28sp" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="-7dp"
        android:indeterminate="true"
        android:max="100"
        android:visibility="gone" />

    <EditText
            android:id="@+id/testEditView"
            android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/app_name" />

    <Button
            android:id="@+id/inputString"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100px"
            android:text="@string/changeText" />
    <Button
        android:id="@+id/btnLoadWithRxJava"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/refresh" />

</LinearLayout>